Separate out button colour to fix contrast

--- a/resources/css/main.less
+++ b/resources/css/main.less
@@ -48,11 +48,11 @@ Seriously, please clean this up somehow. If you can.
 @button-disabled-general-color: @generic-grey-6;
 
 /* Search button -- this should be a shade or two darker than the header */
-@search-button-background-color: @nav-accent;
+@search-button-background-color: @nav-button;
 @search-button-color: @nav-text-highlight;
 
 /* Search button hover effect -- should be _even_ darker than the one above */
-@search-button-hover-background-color: @nav-text-accent;
+@search-button-hover-background-color: @nav-button-accent;
 @search-button-hover-color: @button-bg-color;
 
 /* The actual area where the user types the keyword(s) they want to search for; should be lighter than #header */
