--- a/resources/css/theme/colors/blue.less
+++ b/resources/css/theme/colors/blue.less
@@ -2,11 +2,13 @@
 
 @nav-bg: #8cf;
 @nav-highlight: #9df;
-@nav-accent: #2ae;
+@nav-accent: #6be;
 
 @nav-text: #059;
 @nav-text-highlight: #fff;
-@nav-text-accent: #38b;
+
+@nav-button: #28b;
+@nav-button-accent: #269;
 
 @body-text: #333;
 @header-text: #222;
